fixed letter spacing being too squashed for features and too spaced out for paragraphs

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1123,7 +1123,7 @@ em, i {
 p {
   margin: 0 0 2em 0;
   font-weight: 100;
-  letter-spacing: 0.15em; }
+  letter-spacing: 0.1em; }
   p.content {
     -moz-columns: 20em 2;
     -webkit-columns: 20em 2;
@@ -1877,7 +1877,7 @@ header.major {
       margin-left: auto;
       margin-right: auto; }
   header.major p {
-    letter-spacing: 0.15em;
+    letter-spacing: 0.1em;
     vertical-align: top; }
     header.major p img {
       float: left;
@@ -1993,7 +1993,6 @@ table.alt tbody tr td {
     .features li > :last-child {
       margin-bottom: 0; }
     .features li p {
-      letter-spacing: -0.05em;
       color: #A89CC8; }
   @media screen and (max-width: 980px) {
     .features li {
@@ -2046,7 +2045,7 @@ table.alt tbody tr td {
       line-height: 1.1;
       color: inherit !important;
       font-weight: 300;
-      letter-spacing: 0.15em; }
+      letter-spacing: 0.1em; }
     .statistics li:first-child {
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px; }
@@ -2148,7 +2147,7 @@ table.alt tbody tr td {
     margin: 0 0 0.25em 0; }
   #header p {
     font-size: 1.25em;
-    letter-spacing: 0.15em; }
+    letter-spacing: 0.1em; }
   #header.alt {
     padding: 7em 5em 4em 5em ; }
     #header.alt h1 {
