--- a/public/assets/sass/components/_features.scss
+++ b/public/assets/sass/components/_features.scss
@@ -35,7 +35,6 @@
 			}
 
 			p{
-				letter-spacing: -0.05em;
 				color:#A89CC8;
 			}
 		}
